--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}{% endblock %} - The Todo</title>
+        <title>{% block title %}{% endblock %} - The Gombi Todo</title>
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
@@ -23,7 +23,7 @@
             </button>
             <a class="navbar-brand" href="#">
               <span class="glyphicon glyphicon-list-alt"></span>
-              &nbsp;The Todo
+              &nbsp;The Gombi Todo
             </a>
           </div>
 
