Todos moved to trash now
Deleted todos are now moved to the trash can before they are permanently
removed.

--- a/app/Resources/views/todo/index.html.twig
+++ b/app/Resources/views/todo/index.html.twig
@@ -80,7 +80,7 @@
             <a href="/edit/{{ todo.id }}" data-toggle="tooltip" title="Edit" class="btn btn-default">
               <span class="glyphicon glyphicon-pencil"></span>
             </a>
-            <a href="/delete/{{ todo.id }}" data-toggle="tooltip" title="Delete" class="btn btn-danger">
+            <a href="/delete/{{ todo.id }}" data-toggle="tooltip" title="Move to trash" class="btn btn-danger">
               <span class="glyphicon glyphicon-trash"></span>
             </a>
           </div>
