--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="/css/sticky-footer.css" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -50,6 +51,13 @@
 
         {% block body %}{% endblock %}
       </div>
+      <footer class="footer">
+      <div class="container">
+        <a href="/trash" data-toggle="tooltip" title="Open trash" class="btn btn-default pull-right">
+          <span class="fa fa-trash-o fa-2x"></span>
+        </a>
+      </div>
+    </footer>
 
       <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
       <script src="/js/bootstrap.min.js"></script>
