--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,9 +30,30 @@
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              {% block navbar %}{% endblock %}
-            </ul>
+              <ul class="nav navbar-nav">
+                {% block navbar %}
+                    <li><a href="/">Todo list</a></li>
+                    <li><a href="/create">Create new</a></li>
+                {% endblock %}
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                {% if app.user %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/profile"><span class="fa fa-user fa-fw"></span> Profile</a></li>
+                        <li><a href="/settings"><span class="fa fa-cog fa-fw"></span> Settings</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/logout"><span class="fa fa-sign-out fa-fw"></span>Logout</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                    {% block usernavbar %}
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/create_account">Create an account</a></li>
+                    {% endblock %}
+                {% endif %}
+              </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
