--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="/css/sticky-footer.css" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% block headscripts %}{% endblock %}
     </head>
     <body>
       <nav class="navbar navbar-default">
@@ -39,7 +40,7 @@
               <ul class="nav navbar-nav navbar-right">
                 {% if app.user %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/profile"><span class="fa fa-user fa-fw"></span> Profile</a></li>
                         <li><a href="/settings"><span class="fa fa-cog fa-fw"></span> Settings</a></li>
