Angular.js removed

--- a/app/Resources/views/user/create.html.twig
+++ b/app/Resources/views/user/create.html.twig
@@ -4,10 +4,6 @@
   Create an account
 {% endblock %}
 
-{% block headscripts %}
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-{% endblock %}
-
 {% block stylesheets %}
 <style type="text/css">
     input:-webkit-autofill
@@ -30,9 +26,6 @@
     {
         color: #242424;
     }
-    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-        display: none !important;
-    }
 </style>
 {% endblock %}
 
@@ -43,7 +36,6 @@
 
 {% block body %}
   <h2 class="page-header">Create a new account</h2>
-<div ng-app="newUserApp" ng-controller="mainController">
   <div class="alert alert-info alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <strong class="fa fa-info"></strong>&nbsp;&nbsp; Already have an account? <a href="/login" class="alert-link">Login.</a>
@@ -79,23 +71,13 @@
     {% elseif usernameIssue is not empty %}
         <div class="form-group has-error">
     {% else %}
-        {% verbatim %}
-        <div class="form-group{{ showUsernameLengthWarning ? ' has-error' : ''}}">
-        {% endverbatim %}
+        <div class="form-group">
     {% endif %}
             <div class="input-group input-group-lg">
                 <span class="input-group-addon">
                     <span class="fa fa-user fa-fw"></span>
                 </span>
-                {{ form_widget(form.username, {'attr' : {'class' : 'form-control', 'placeholder' : 'Username', 'ng-model' : 'username', 'ng-change' : 'change()'}}) }}
-                {% verbatim %}
-                    <div ng-if="usernameShort" class="input-group-addon">
-                        Too short
-                    </div>
-                    <div ng-if="usernameLong" class="input-group-addon">
-                        Too long
-                    </div>
-                {% endverbatim %}
+                {{ form_widget(form.username, {'attr' : {'class' : 'form-control', 'placeholder' : 'Username'}}) }}
             </div>
         </div>
 
@@ -133,35 +115,4 @@
     {{ form_end(form) }}
   </form>
 </div>
-{% endblock %}
-
-{% block javascripts %}
-<script>
-    var newUserApp = angular.module('newUserApp', [])
-
-        .controller('mainController', function($scope) {
-            $scope.showUsernameLengthWarning = false;
-            $scope.usernameShort = false;
-            $scope.usernameLong = false;
-            $scope.change = function() {
-                if($scope.username.length < 5)
-                {
-                    $scope.showUsernameLengthWarning = true;
-                    $scope.usernameShort = true;
-                }
-                else if($scope.username.length > 32)
-                {
-                    $scope.showUsernameLengthWarning = true;
-                    $scope.usernameLong = true;
-                }
-                else
-                {
-                    $scope.showUsernameLengthWarning = false;
-                    $scope.usernameLong = false;
-                    $scope.usernameShort = false;
-                }
-            }
-
-    });
-</script>
 {% endblock %}
