--- a/app/Resources/views/todo/edit.html.twig
+++ b/app/Resources/views/todo/edit.html.twig
@@ -18,22 +18,31 @@
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
   <h2 class="page-header">Edit <strong>{{ todo.name }}</strong></h2>
-  <form name="form" method="post">
-    {{ form_row(form.name, {'attr' : {'class' : 'form-control'}}) }}
-    {{ form_row(form.description, {'attr' : {'class' : 'form-control'}}) }}
-    {{ form_row(form.priority, {'attr' : {'class' : 'form-control'}}) }}
-    <label for="form_dueDate" class="required">Due Date</label>
-    <div class="form-group">
-        <div class='input-group date' id='dueDate'>
-            {{ form_widget(form.dueDate, {'attr' : {'class' : 'form-control'}}) }}
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-calendar"></span>
-            </span>
+    <form name="form" method="post">
+          <div class="form-group">
+              {{ form_row(form.name, {'attr' : {'class' : 'form-control'}}) }}
+          </div>
+          <div class="form-group">
+                {{ form_label(form.description) }}
+                {{ form_widget(form.description, {'attr' : {'class' : 'form-control'}}) }}
+            </div>
+        <div class="form-group">
+            {{ form_row(form.priority, {'attr' : {'class' : 'form-control'}}) }}
         </div>
-    </div>
-    {{ form_rest(form) }}
-    <input type="submit" value="Edit" class="btn btn-primary pull-right" />
-  </form>
+        <label for="form_dueDate" class="required">Due Date</label>
+        <div class="form-group">
+            <div class='input-group date' id='dueDate'>
+                {{ form_widget(form.dueDate, {'attr' : {'class' : 'form-control'}}) }}
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+        </div>
+        {{ form_rest(form) }}
+        <div class="form-group">
+            <input type="submit" value="Edit" class="btn btn-primary pull-right}}" />
+        </div>
+      </form>
 {% endblock %}
 
 {% block javascripts %}
