--- a/app/Resources/views/todo/edit.html.twig
+++ b/app/Resources/views/todo/edit.html.twig
@@ -40,7 +40,7 @@
         </div>
         {{ form_rest(form) }}
         <div class="form-group">
-            <input type="submit" value="Edit" class="btn btn-primary pull-right}}" />
+            <input type="submit" value="Edit" class="btn btn-primary pull-right" />
         </div>
       </form>
 {% endblock %}
