--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,12 @@
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/css/sticky-footer.css" />
         {% block stylesheets %}{% endblock %}
+        <style type="text/css">
+            .btn
+            {
+                margin-bottom: 5px;
+            }
+        </style>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block headscripts %}{% endblock %}
     </head>
