--- a/app/Resources/views/todo/details.html.twig
+++ b/app/Resources/views/todo/details.html.twig
@@ -72,7 +72,11 @@
                 <li class="list-group-item">Edited: <strong>{{ todo.editDate | date('d/m/Y H:i') }}</strong></li>
             {% endif %}
             <li class="list-group-item">Due date: <strong>{{ todo.dueDate | date('d/m/Y H:i') }}</strong></li>
-            <li class="list-group-item break-long-words active">{{ todo.description | raw | converturls | raw | nl2br }}</li>
+            {% if todo.description %}
+                <li class="list-group-item break-long-words">
+                    {{ todo.description | raw | converturls | raw | nl2br }}
+                </li>
+            {% endif %}
           </ul>
     </div>
 
